corrected my css file name in linking it to the html fie

--- a/x.html
+++ b/x.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>webpage</title>
-    <link rel="stylesheet" type="text/css" href="istile.css">
+    <link rel="stylesheet" type="text/css" href="stylle.css">
   </head>
   <body>
     <div class="header">
@@ -43,7 +43,6 @@
           <h1>Cameras</h1>
           <h4>Choose among the best available in the world</h4>
         </div>
-      </br>
         </div>
   
           <div class="watch">
