Changed image link

--- a/x.html
+++ b/x.html
@@ -21,7 +21,7 @@
     
       <style>
         body{
-          background-image: url("https://i.ibb.co/pww4xw4/intro-bg-1.jpg");
+          background-image: url("https://i.ibb.co/dQTRrbG/intro-bg-1.jpg");
           height: 50%;
           background-position: center;
           background-repeat: no-repeat;
