changed images link and made them public instead of private

--- a/x.html
+++ b/x.html
@@ -38,7 +38,7 @@
 
       <div class="img">
         <div class="cam">
-          <img src="https://i.ibb.co/N3nJrcS/camera.jpg" alt="camera" width="400px" height="400px">
+          <img src="https://i.ibb.co/vjcrwq6/camera.jpg" alt="camera" width="400px" height="400px">
         <div class="camtext">
           <h1>Cameras</h1>
           <h4>Choose among the best available in the world</h4>
@@ -46,7 +46,7 @@
         </div>
   
           <div class="watch">
-            <img src="https://i.ibb.co/LhkCqHX/watch.jpg" alt="watch" width="400px" height="400px">
+            <img src="https://i.ibb.co/dM8kpMf/watch.jpg" alt="watch" width="400px" height="400px">
           <div class="watchtext">
             <h1>Watches</h1>
             <h4>Original Watches from the best brands</h4>
@@ -54,7 +54,7 @@
           </div>
           
           <div class="shirt">
-            <img src="https://i.ibb.co/qyv1gQ0/shirt.jpg" alt="shirt" width="400px" height="400px">
+            <img src="https://i.ibb.co/DpCjLSN/shirt.jpg" alt="shirt" width="400px" height="400px">
           <div class="shirttext">
             <h1>Shirts</h1>
             <h4>Our Exclusive collection of Shirts</h4>
