changed few style of text

--- a/x.html
+++ b/x.html
@@ -3,6 +3,7 @@
   <head>
     <title>webpage</title>
     <link rel="stylesheet" type="text/css" href="stylle.css">
+    <body class="container">
   </head>
   <body>
     <div class="header">
